fixing z-indexing and events for theme designer
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@28761 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/ThemeDesigner/css/ThemeDesignerPreview.scss
+++ b/extensions/wikia/ThemeDesigner/css/ThemeDesignerPreview.scss
@@ -1,4 +1,5 @@
 @import "../../../../skins/oasis/css/mixins/opacity";
+@import "../../../../skins/oasis/css/core/layout";
 
 .clickmask {
 	@include opacity(0);
@@ -8,5 +9,5 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 999999;
+	z-index: $zTop + 1;
 }
